@@ -87,6 +87,7 @@ EXTRA_INCLUDES=
 # change the filename extension from `.o' to `.so'. 
 
 #CFLAGS_SHLIB=
+#LD_SHLIB=
 #LDFLAGS_SHLIB=
 #LDFLAGS_SHLIB_EXPORT=
 
