@@ -19,7 +19,7 @@ libproxy.a: $(OBJS)
 
 libproxy.so: $(OBJS_PIC)
 	rm -f $@
-	$(LD) $(LDFLAGS_SHLIB) -o $@ $(OBJS_PIC)
+	$(LD_SHLIB) $(LDFLAGS_SHLIB) -o $@ $(OBJS_PIC)
 
 .SUFFIXES: .o .lo
 
