@@ -31,7 +31,7 @@ ab: ab.o
 apxs: apxs.pl
 	sed <apxs.pl >apxs \
 	    -e 's%@CC@%$(CC)%g' \
-	    -e 's%@LD@%$(LD)%g' \
+	    -e 's%@LD_SHLIB@%$(LD_SHLIB)%g' \
 	    -e 's%@CFLAGS@%$(CFLAGS)%g' \
 	    -e 's%@CFLAGS_SHLIB@%$(CFLAGS_SHLIB)%g' \
 	    -e 's%@LDFLAGS_SHLIB@%$(LDFLAGS_SHLIB)%g' && chmod a+x apxs
